<package>
  <name>or_kenv</name>
  <version>0.0.1</version>
  <description>
    kenv bindings for OpenRAVE
  </description>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>yamlcpp</build_depend>
  <build_depend>kenv</build_depend>
  <build_depend>openrave</build_depend>
  <run_depend>cgal</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>yamlcpp</run_depend>
  <run_depend>kenv</run_depend>
  <run_depend>openrave</run_depend>
</package>
