<package>
  <name>polygonal_kenv</name>
  <version>0.0.1</version>
  <description>
    Two-dimensional planning environment with polygonal geometry.
  </description>
  <maintainer email="mkoval@cs.cmu.edu">Michael Koval</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cgal</build_depend>
  <build_depend>geos</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>yamlcpp</build_depend>
  <build_depend>kenv</build_depend>
  <run_depend>cgal</run_depend>
  <run_depend>geos</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>yamlcpp</run_depend>
  <run_depend>kenv</run_depend>
</package>
